--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 * linguist-vendored
 *.php linguist-vendored=false
+*.sql linguist-detectable=true
+*.html linguist-detectable=true
+*.js linguist-detectable=true
 
